css fix for body overflow to infinity
Set element display to block. Fixes
- switching body overflow between hidden and visible caused <movie-list> to not render
- body height grew incomparably large to actual content

--- a/src/components/MovieList/style.css
+++ b/src/components/MovieList/style.css
@@ -3,6 +3,7 @@ movie-list {
     display: inline-block;
     margin-left: auto;
     margin-right: auto;
+    display: block;
 }
 
 .in-theaters {
